--- a/source/app/composer.json
+++ b/source/app/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "my-vendor/my-package",
+    "version": "1.0.0",
     "description": "",
     "license": "MIT",
     "require": {
@@ -13,8 +14,10 @@
         "aura/sql": "^5.0",
         "aura/sqlquery": "^3.0",
         "koriym/env-json": "^0.1.0",
+        "koriym/http-constants": "^1.2",
         "koriym/loop": "^1.0",
         "koriym/query-locator": "^1.5",
+        "laminas/laminas-diactoros": "^3.3",
         "qiq/qiq": "^3.0"
     },
     "require-dev": {
@@ -65,7 +68,8 @@
             "@metrics"
         ],
         "post-install-cmd": "@composer bin all install --ansi",
-        "post-update-cmd": "@composer bin all update --ansi"
+        "post-update-cmd": "@composer bin all update --ansi",
+        "cli": "php bin/cli.php"
     },
     "scripts-descriptions": {
         "test": "Run unit tests",
