--- a/source/app/composer.json
+++ b/source/app/composer.json
@@ -5,6 +5,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "aura/accept": "^4.0",
         "aura/auth": "^4.0",
         "aura/di": "^4.2",
         "aura/html": "^2.6",
