--- a/source/app/composer.json
+++ b/source/app/composer.json
@@ -19,6 +19,7 @@
         "koriym/loop": "^1.0",
         "koriym/query-locator": "^1.5",
         "laminas/laminas-diactoros": "^3.3",
+        "laminas/laminas-http": "^2.5",
         "qiq/qiq": "^3.0"
     },
     "require-dev": {
