--- a/source/app/public/admin-src/package.json
+++ b/source/app/public/admin-src/package.json
@@ -4,10 +4,12 @@
         "@rollup/plugin-node-resolve": "^15.2.3",
         "@rollup/plugin-replace": "^5.0.7",
         "@rollup/plugin-terser": "^0.4.4",
-        "rollup": "^4.19.0"
+        "rollup": "^4.19.0",
+        "rollup-plugin-sass": "^1.13.1",
+        "sass": "^1.77.8"
     },
     "engines": {
-        "node": "21.1.0"
+        "node": "22.5.1"
     },
     "scripts": {
         "build": "rollup --config"
